Fix title overflowing

--- a/client/src/assets/styles/components/UserStats/userstats.scss
+++ b/client/src/assets/styles/components/UserStats/userstats.scss
@@ -13,7 +13,7 @@ div.stat-container {
         background-color: $background-dark;
         border-radius: 10px;
         margin: 10px;
-        padding: 10px;
+        padding: 20px;
         font-size: 1rem;
     
         p.badge-title {
